fix arrow naviagtion and overflow

--- a/src/app/produkt/[id]/product-page.scss
+++ b/src/app/produkt/[id]/product-page.scss
@@ -110,6 +110,7 @@
   .photo-container {
     cursor: pointer;
     position: relative;
+    overflow: hidden;
     width: 250px;
     height: 250px;
 
